--- a/.github/workflows/ai-code-guard.yml
+++ b/.github/workflows/ai-code-guard.yml
@@ -27,4 +27,4 @@ jobs:
         run: npm run review-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
