--- a/.github/workflows/ai-code-guard.yml
+++ b/.github/workflows/ai-code-guard.yml
@@ -40,3 +40,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          AUGMENT_API_KEY: ${{ secrets.AUGMENT_API_KEY }}
